<resources>
    <string name="app_name">Chat App</string>
    <string name="n_a">N/A</string>
    <string name="please_wait">Please wait…</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_internet">No Network Connection</string>
    <string name="account_login">Account Login</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="email_empty">Email address is Empty</string>
    <string name="password_empty">Password is Empty</string>
    <string name="email_invalid">Email is not valid</string>
    <string name="went_wrong">Something went wrong. Please try again!!!</string>
    <string name="groups">Groups</string>
    <string name="search_here">Search here - Hit enter at the end</string>
    <string name="users">Users</string>
    <string name="end_reached">End reached…</string>
    <string name="add_user">Add User</string>
    <string name="update_user">Update User</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="role_admin">ADMIN</string>
    <string name="role_user">USER</string>
    <string name="select_role">Select a role</string>
    <string name="account_status">Account Status</string>
    <string-array name="array_roles">
        <item>@string/select_role</item>
        <item>@string/role_user</item>
        <item>@string/role_admin</item>
    </string-array>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="submit">Submit</string>
    <string name="check_name">Check user name once</string>
    <string name="check_email">Check email address once</string>
    <string name="check_mobile">Check mobile number once</string>
    <string name="check_password">Check password once</string>
    <string name="check_role">Please select a role</string>
    <string name="add_group">Add Group</string>
    <string name="members">Members</string>
    <string name="type_here">Type your message here…</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="empty_msg">Message cannot be empty</string>
</resources>